# 6DOF_MobileRobotic_arm

./: README.md
Kinect_PCL/: CMakeLists.txt  main.cpp
Project_codes/catkin_ws/Kinect_PCL/: CMakeLists.txt  package.xml
Project_codes/catkin_ws/Kinect_PCL/src/: Kinect_PCL_file.cpp
Project_codes/catkin_ws/kinect_pcl/: CMakeLists.txt  package.xml
Project_codes/catkin_ws/rtabmap_test/: CMakeLists.txt  package.xml
Project_codes/catkin_ws/rtabmap_test/db/: rtabmap.db
Project_codes/catkin_ws/rtabmap_test/launch/: test_.launch
Project_codes/catkin_ws/rtabmap_test/rviz/: kinect.rviz
